feat: add comments api
