# docs/swagger.yaml
@@ -1,5 +1,16 @@
 basePath: /v1
 definitions:
+  main.CreateCommentPayload:
+    properties:
+      content:
+        maxLength: 1000
+        type: string
+      post_id:
+        type: integer
+    required:
+    - content
+    - post_id
+    type: object
   main.CreatePostPayload:
     properties:
       content:
@@ -45,6 +56,12 @@ definitions:
     - email
     - password
     - username
+    type: object
+  main.UpdateCommentPayload:
+    properties:
+      content:
+        maxLength: 1000
+        type: string
     type: object
   main.UpdatePostPayload:
     properties:
@@ -251,6 +268,73 @@ paths:
       summary: Register user
       tags:
       - auth
+  /comments/{commentId}:
+    delete:
+      consumes:
+      - application/json
+      description: delete a comment
+      parameters:
+      - description: Comment ID
+        in: path
+        name: commentId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Delete comment
+      tags:
+      - comments
+    patch:
+      consumes:
+      - application/json
+      description: update an existing comment
+      parameters:
+      - description: Comment ID
+        in: path
+        name: commentId
+        required: true
+        type: integer
+      - description: Update comment payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.UpdateCommentPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/store.Comment'
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Update comment
+      tags:
+      - comments
   /health:
     get:
       consumes:
@@ -399,6 +483,67 @@ paths:
       summary: Update post
       tags:
       - posts
+  /posts/{postId}/comments:
+    get:
+      consumes:
+      - application/json
+      description: get comments for a post
+      parameters:
+      - description: Post ID
+        in: path
+        name: postId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.Comment'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Get comments
+      tags:
+      - comments
+    post:
+      consumes:
+      - application/json
+      description: create a new comment on a post
+      parameters:
+      - description: Create comment payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.CreateCommentPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/store.Comment'
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Create comment
+      tags:
+      - comments
   /users/{userId}:
     get:
       consumes:
